--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <br>
  <section class="songs">
   <div class="song-card"> <br>
-    <a href="Moramz ft Dogo elisha - umbea.html"></a>
+    <a href="Moramz ft Dogo elisha - umbea.html">
             <img src="images/moramz ft dogo elisha- umbea.jpg" alt="song cover">
             <div class="info"> </a>
                 <h3>Umbea</h3>
@@ -228,7 +228,7 @@
     <div class="contact-info">
       For Adverts,sponsorship and partnership,get in touch with
       <p><strong>Email:</strong> kellashstudiotz@gmail.com</p>
-      <p><strong>Phone:</strong> +255 784-800-125</p>
+      <p><strong>Phone:</strong> +255 784-800-125 | +255 696-688-332</p>
       <p><strong>Location:</strong> Dar es Salaam, Tanzania</p>
     </div>
     <br>
@@ -242,4 +242,5 @@
 <script src="main.js"></script>
 
 </body>
+
 </html>
