--- a/index.html
+++ b/index.html
@@ -112,6 +112,31 @@
 
  <div id="results"></div>
   </div>
+  <h2 style="text-align:center; margin-top:30px; font-size: 17px;">🔥MOST SEARCHED ARTISTS ON KELLASH STUDIO</h2>
+
+<div class="trending-artists">
+
+    <a href="fanu benks.html" class="artist-box">
+        <img src="images/fanu ep.jpg" alt="Fanu Benks">
+        <p>Fanu Benks</p>
+    </a>
+    <a href="" class="artist-box">
+        <img src="images/fessy melody.jpg" alt="Fessy-melody">
+        <p>Fessy-melody</p>
+    </a>
+ <a href="" class="artist-box">
+        <img src="images/moramz-ela.jpg" alt="Moramz">
+        <p>Moramz</p>
+    </a>
+
+
+
+
+
+</div>
+
+
+
 </section>
   <section class="categories">
   <a href="audio.html">Audio</a>
@@ -121,7 +146,7 @@
   
   <a href="hiphop.html">Hip-hop/Rap</a>
 </section>
-  </center>
+</center>
   <!-- Hero Section -->
   <section class="hero">
       <h1 style="font-size: 27px;">SIKILIZA NA PAKUA NYIMBO ONLINE!</h1>
@@ -129,7 +154,8 @@
       <a href="services.html" class="btn">Tazama Huduma Zetu</a>
       
   </section>
-  
+  <!-- 🔥 TRENDING ARTISTS SECTION -->
+
   <center>
     <div class="cardyanyimbo" style="border:1px solid #ccc; padding:15px; width:300px; text-align:center; margin:10px; border-radius:10px;">
     <!-- Picha ya track -->
@@ -142,7 +168,7 @@
 <br>
  <section class="songs">
   <div class="song-card"> <br>
-    <a href="Moramz ft Dogo elisha - umbea.html">
+    <a href="Moramz ft Dogo elisha - umbea.html"></a>
             <img src="images/moramz ft dogo elisha- umbea.jpg" alt="song cover">
             <div class="info"> </a>
                 <h3>Umbea</h3>
@@ -228,7 +254,7 @@
     <div class="contact-info">
       For Adverts,sponsorship and partnership,get in touch with
       <p><strong>Email:</strong> kellashstudiotz@gmail.com</p>
-      <p><strong>Phone:</strong> +255 784-800-125 | +255 696-688-332</p>
+      <p><strong>Phone:</strong> +255 784-800-125</p>
       <p><strong>Location:</strong> Dar es Salaam, Tanzania</p>
     </div>
     <br>
@@ -242,5 +268,4 @@
 <script src="main.js"></script>
 
 </body>
-
 </html>
