--- a/fanu benks.html
+++ b/fanu benks.html
@@ -107,10 +107,10 @@
     <P style="color: red;">ARTIST PROFILE PAGE</P>
 
 <br>
-
+<div class="songs">
 <!-- MAIN ARTIST CARD -->
-<div class="cardyamsanii" style="max-width:500px; margin:auto; text-align:center;">
-
+<div class="song-card">
+<br>
     <img src="images/fanu ep.jpg" style="
         width:140px; 
         height:140px; 
@@ -127,6 +127,7 @@
       Fanu Benks ni msanii mwenye kipaji kikubwa anayechipukia kwenye muziki wa HipHop/Rap na Bongo Flava. Akiwa na sauti ya kipekee na uandishi wenye ujumbe mzito.
     </p>
 
+</div>
 </div>
 <br>
 
